--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -59,10 +59,11 @@
 
 
     <div class="regular-wrapper">
-      
+      <section id="projects">
       <h2> Projects </h2>
-
-          <section id="projects">
+        <table>
+          <tr>
+            <th>
             <div class="container">
               <div class="card">
                 <div class="face face1">
@@ -79,8 +80,9 @@
                 </div>
               </div> 
             </div>  
-
-
+          </th>
+          
+            <th>
             <div class="container">
                 <div class="card">
                   <div class="face face1">
@@ -96,8 +98,11 @@
                   </div>
                 </div> 
               </div>  
+            </th>
+            </tr>
 
-
+              <tr>
+                <th>
               <div class="container">
                   <div class="card">
                     <div class="face face1">
@@ -113,7 +118,8 @@
                     </div>
                   </div> 
                 </div> 
-
+              </th>
+              <th>
                 <div class="container">
                     <div class="card">
                       <div class="face face1">
@@ -129,7 +135,9 @@
                       </div>
                     </div> 
                   </div> 
-
+                </th>
+                </tr>
+                </table>
           </section>
     </div>
 
