--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -7,46 +7,46 @@
     <title>P.C.-Portfolio</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <link rel="icon" type="img/png" href="favicon.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
-
   
-    <div class="navbar fixed-top navbar-light">
+    <header class="navbar fixed-top  navbar-light">
         <a class=" navbar-brand" href="#"></a>
         <button class="navbar-toggler border border-warning" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="#intro">Intro</a>
+                  <li class="nav-item">
+                        <a class="nav-link text-light" href="#intro"><span>I</span>ntro</a>
                       </li>
                   <li class="nav-item">
-                    <a class="nav-link text-light" href="#projects">Projects</a>
+                    <a class="nav-link text-light" href="#projects"><span>P</span>rojects</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-light" href="#skills">Skills</a>
+                    <a class="nav-link text-light" href="#skills"><span>S</span>kills</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-light" href="#contact">Contact Info</a>
+                    <a class="nav-link text-light" href="#contact"><span>C</span>ontact Info</a>
                   </li>
                 </ul>
               </div>
-    </div>
-
-   s
+            </header>
+  
   
     <div class="parallax-wrapper">   
         <div class="content">
                     <section id="intro">
-                            <div class="jumbotron jumbotron-fluid shadow p-4 mb-3 bg-white rounded">
+                            <div class="jumbotron jumbotron-fluid shadow p-2 mb-2 bg-white rounded">
                                 <h1 class="display-4">Paul W. Cooper</h1>
-                                <p class="lead">Welcome to my website,
-                                I am a Web Developer interested in learning as much as possible and creating many different projects.</p>
+                                <p class="lead">Welcome to my website!
+                                I am a Full Stack Developer interested in creating many projects and expanding my horizons as I progress.</p>
                             </div> 
                             
                     </section>
@@ -60,6 +60,7 @@
 
     <div class="regular-wrapper">
       <section id="projects">
+      <div class="scrollable">
       <h2> Projects </h2>
         <table>
           <tr>
@@ -140,6 +141,7 @@
                 </table>
           </section>
     </div>
+  </div>
 
   <div class="parallax-wrapper1">    
     
@@ -153,7 +155,12 @@
 <div class="regular-wrapper1">
 <div class="content">
   <section id="contact">
-      <h1></h1>
+      <div class="button">
+          <i class=""></i>
+          <div class="blurred">
+
+          </div>
+      </div>
   </section>
 </div>
 </div>
