--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -22,7 +22,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav">\*
                   <li class="nav-item">
                         <a class="nav-link text-light" href="#intro"><span>I</span>ntro</a>
                       </li>
@@ -46,7 +46,7 @@
                             <div class="jumbotron jumbotron-fluid shadow p-2 mb-2 bg-white rounded">
                                 <h1 class="display-4">Paul W. Cooper</h1>
                                 <p class="lead">Welcome to my website!
-                                I am a Full Stack Developer interested in creating many projects and expanding my horizons as I progress.</p>
+                                I am a *Developer interested in creating many projects and expanding my horizons as I progress.</p>
                             </div> 
                             
                     </section>
@@ -203,8 +203,7 @@
       <span></span>
       <span></span>
     </br></br></br>
-    <p>Gmail:
-       Pwccoop@gmail.com </p>
+    <p>Gmail</p>
     </div>
 </div>
 </a>
@@ -229,7 +228,31 @@
       </svg>
 
   </section>
+
+</br>
+<div>
+<section id="footer">
+  <ul class="footer-nav">
+    <li class="footer-item">
+          <a class="nav-link text-light" href="#intro"><span>I</span>ntro</a>
+        </li>
+    <li class="footer-item">
+      <a class="nav-link text-light" href="#projects"><span>P</span>rojects</a>
+    </li>
+    <li class="footer-item">
+      <a class="nav-link text-light" href="#skills"><span>S</span>kills</a>
+    </li>
+    <li class="footer-item">
+      <a class="nav-link text-light" href="#contact"><span>C</span>ontact Info</a>
+    </li>
+  </ul>
+
+</br>
+<h5>Paul W. Cooper</h5>
+<h5>Phone #: (540) 214-4485</h5>
+<h5>Email: Pwccoop@gmail.com</h5>
 </div>
+</section>
 
 
 
