--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -45,8 +45,10 @@
                     <section id="intro">
                             <div class="jumbotron jumbotron-fluid shadow p-2 mb-2 bg-white rounded">
                                 <h1 class="display-4">Paul W. Cooper</h1>
+                                <hr>
                                 <p class="lead">Welcome to my website!
-                                I am a *Developer interested in creating many projects and expanding my horizons as I progress.</p>
+                                I am a Developer interested in creating many projects and expanding my horizons as I progress.</p>
+                                <h4>"Fall in love with the process and the results will come."</h4>
                             </div> 
                             
                     </section>
